--- a/books.html
+++ b/books.html
@@ -152,7 +152,7 @@
             </p>
           </div>
           <p style="font-size: larger" class="oxygen-regular">R 300.00</p>
-          <a href="index.html"
+          <a href="./greatGatsby.html"
             ><button class="view-details">View Details</button></a
           >
         </div>
