All product details done

--- a/books.html
+++ b/books.html
@@ -170,7 +170,7 @@
             </p>
           </div>
           <p style="font-size: larger" class="oxygen-regular">R 255.00</p>
-          <a href="index.html"
+          <a href="richDad.html"
             ><button class="view-details">View Details</button></a
           >
         </div>
