--- a/diary.html
+++ b/diary.html
@@ -141,10 +141,10 @@
             <a class="links" style="color: white" href="index.html">Home</a>
           </li>
           <li>
-            <a class="links" style="color: #ffb433" href="books.html">Books</a>
+            <a class="links" style="color: white" href="books.html">Books</a>
           </li>
           <li>
-            <a class="links" style="color: white" href="stationary.html"
+            <a class="links" style="color: #ffb433" href="stationary.html"
               >Stationary</a
             >
           </li>
@@ -165,28 +165,26 @@
       </div>
       <div style="color: white" class="oxygen-regular">Log In</div>
     </nav>
-    <a href="books.html"> <button class="back-button">Back</button></a>
+    <a href="stationary.html"> <button class="back-button">Back</button></a>
     <section class="container">
       <div class="details">
         <div class="sub-section">
-          <img src="./assets/images/Great_Gatsby.jpg" class="image" />
+          <img src="./assets/images/diary.jpg" class="image" />
         </div>
         <div class="sub-section specifications">
           <p style="font-size: x-large; font: bold" class="oxygen-regular">
-            R 300.00
+            R 119.00
           </p>
-          <p style="color: grey" class="oxygen-regular">Average Rating: 4/5</p>
-          <span class="fa fa-star checked"></span>
+          <p style="color: grey" class="oxygen-regular">Average Rating: 3/5</p>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
           <p class="book-description oxygen-regular">
-            The Great Gatsby is a 1925 novel by American writer F. Scott
-            Fitzgerald. Set in the Jazz Age on Long Island, near New York City,
-            the novel depicts first-person narrator Nick Carraway's interactions
-            with Jay Gatsby, the mysterious millionaire with an obsession to
-            reunite with his former lover, Daisy Buchanan.
+            Stay organised with the 2025 Diary provided by Stationary R Us.
+            Along with its durable cover, this diary offers plenty of pages for
+            your daily plans, goals and experiences.
           </p>
           <div class="cta">
             <button class="buttons">Add To Cart</button>
