--- a/richDad.html
+++ b/richDad.html
@@ -169,24 +169,25 @@
     <section class="container">
       <div class="details">
         <div class="sub-section">
-          <img src="./assets/images/Great_Gatsby.jpg" class="image" />
+          <img src="./assets/images/Rich_Dad_Poor_Dad.jpg" class="image" />
         </div>
         <div class="sub-section specifications">
           <p style="font-size: x-large; font: bold" class="oxygen-regular">
-            R 300.00
+            R 255.00
           </p>
-          <p style="color: grey" class="oxygen-regular">Average Rating: 4/5</p>
-          <span class="fa fa-star checked"></span>
+          <p style="color: grey" class="oxygen-regular">Average Rating: 3/5</p>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
           <p class="book-description oxygen-regular">
-            The Great Gatsby is a 1925 novel by American writer F. Scott
-            Fitzgerald. Set in the Jazz Age on Long Island, near New York City,
-            the novel depicts first-person narrator Nick Carraway's interactions
-            with Jay Gatsby, the mysterious millionaire with an obsession to
-            reunite with his former lover, Daisy Buchanan.
+            Rich Dad Poor Dad is a 1997 book written by Robert T. Kiyosaki and
+            Sharon Lechter. It advocates the importance of financial literacy
+            (financial education), financial independence and building wealth
+            through investing in assets, real estate investing, starting and
+            owning businesses, as well as increasing one's financial
+            intelligence (financial IQ).
           </p>
           <div class="cta">
             <button class="buttons">Add To Cart</button>
