--- a/stationary.html
+++ b/stationary.html
@@ -152,7 +152,7 @@
             </p>
           </div>
           <p style="font-size: larger" class="oxygen-regular">R 119.00</p>
-          <a href="index.html"
+          <a href="diary.html"
             ><button class="view-details">View Details</button></a
           >
         </div>
