--- a/accessories.html
+++ b/accessories.html
@@ -153,7 +153,7 @@
             </p>
           </div>
           <p style="font-size: larger" class="oxygen-regular">R 45.00</p>
-          <a href="index.html"
+          <a href="bookmarker.html"
             ><button class="view-details">View Details</button></a
           >
         </div>
