--- a/bookmarker.html
+++ b/bookmarker.html
@@ -141,7 +141,7 @@
             <a class="links" style="color: white" href="index.html">Home</a>
           </li>
           <li>
-            <a class="links" style="color: #ffb433" href="books.html">Books</a>
+            <a class="links" style="color: white" href="books.html">Books</a>
           </li>
           <li>
             <a class="links" style="color: white" href="stationary.html"
@@ -149,7 +149,7 @@
             >
           </li>
           <li>
-            <a class="links" style="color: white" href="accessories.html"
+            <a class="links" style="color: #ffb433" href="accessories.html"
               >Accessories</a
             >
           </li>
@@ -165,15 +165,15 @@
       </div>
       <div style="color: white" class="oxygen-regular">Log In</div>
     </nav>
-    <a href="books.html"> <button class="back-button">Back</button></a>
+    <a href="accessories.html"> <button class="back-button">Back</button></a>
     <section class="container">
       <div class="details">
         <div class="sub-section">
-          <img src="./assets/images/Great_Gatsby.jpg" class="image" />
+          <img src="./assets/images/Bookmarker.jpg" class="image" />
         </div>
         <div class="sub-section specifications">
           <p style="font-size: x-large; font: bold" class="oxygen-regular">
-            R 300.00
+            R 45.00
           </p>
           <p style="color: grey" class="oxygen-regular">Average Rating: 4/5</p>
           <span class="fa fa-star checked"></span>
@@ -182,11 +182,10 @@
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star"></span>
           <p class="book-description oxygen-regular">
-            The Great Gatsby is a 1925 novel by American writer F. Scott
-            Fitzgerald. Set in the Jazz Age on Long Island, near New York City,
-            the novel depicts first-person narrator Nick Carraway's interactions
-            with Jay Gatsby, the mysterious millionaire with an obsession to
-            reunite with his former lover, Daisy Buchanan.
+            Add a touch of elegance to your reading with this vibrantly colored
+            bookmark. Designed with beautiful patterns, it not only marks your
+            place but also enhances your reading experience. The perfect
+            companion for every book lover!
           </p>
           <div class="cta">
             <button class="buttons">Add To Cart</button>
