--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         justify-content: space-between;
         align-items: center;
         gap: 20px;
+        margin-bottom: 100px;
+        border-radius: 10px;
       }
       .tabs {
         display: flex;
