Checkout page done

--- a/bookmarker.html
+++ b/bookmarker.html
@@ -189,7 +189,9 @@
           </p>
           <div class="cta">
             <button class="buttons">Add To Cart</button>
-            <button class="buttons">Checkout</button>
+            <a href="checkout.html">
+              <button class="buttons">Checkout</button></a
+            >
           </div>
         </div>
       </div>
