--- a/richDad.html
+++ b/richDad.html
@@ -173,7 +173,7 @@
         </div>
         <div class="sub-section specifications">
           <p style="font-size: x-large; font: bold" class="oxygen-regular">
-            R 255.00
+            R 250.00
           </p>
           <p style="color: grey" class="oxygen-regular">Average Rating: 3/5</p>
           <span class="fa fa-star checked"></span>
@@ -191,7 +191,9 @@
           </p>
           <div class="cta">
             <button class="buttons">Add To Cart</button>
-            <button class="buttons">Checkout</button>
+            <a href="checkout.html">
+              <button class="buttons">Checkout</button></a
+            >
           </div>
         </div>
       </div>
