--- a/diary.html
+++ b/diary.html
@@ -188,7 +188,9 @@
           </p>
           <div class="cta">
             <button class="buttons">Add To Cart</button>
-            <button class="buttons">Checkout</button>
+            <a href="checkout.html">
+              <button class="buttons">Checkout</button></a
+            >
           </div>
         </div>
       </div>
