--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
   </head>
   <body style="background-color: #fbf8ef; min-height: 95vh; padding-top: 20px">
     <nav class="navbar">
-      <div style="color: white" class="oxygen-regular">LOGO</div>
+      <div style="color: white" class="oxygen-regular">LU's BOOKS</div>
       <div>
         <ul class="tabs oxygen-regular">
           <li>
