--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
@@ -44,11 +50,153 @@
         font-weight: 400;
         font-style: normal;
       }
+
+      .playfair-display {
+        font-family: "Playfair Display", serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+      }
+    </style>
+    <style>
+      .container {
+        width: 100%;
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        margin-bottom: 100px;
+      }
+      .hero {
+        height: 500px;
+        width: 100%;
+        display: flex;
+        gap: 0px;
+      }
+      .hero > div {
+        height: 100%;
+        width: 50%;
+      }
+
+      .hero-img > img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+      .motto {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        padding: 25px;
+        justify-content: center;
+        align-items: center;
+        max-height: 500px;
+      }
+      .slogan {
+        font-size: 4rem;
+        color: #343434;
+        font-family: "Oxygen", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+      }
+
+      .tagline {
+        font-size: 1.5rem;
+        color: #343434;
+      }
+      .buttons {
+        border: none;
+        background-color: #ffb433;
+        color: white;
+        text-align: center;
+        width: 300px;
+        height: 60px;
+        font-size: larger;
+        cursor: pointer;
+      }
+
+      .buttons:hover {
+        background-color: #e6952b;
+      }
+    </style>
+    <style>
+      .best {
+        height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+      }
+
+      .best-books {
+        display: flex;
+        gap: 35px;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
+    <style>
+      .book-card {
+        width: 300px;
+        height: auto;
+        padding: 20px;
+        background-color: white;
+        border-radius: 0.5rem;
+      }
+
+      .book-title {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 2px;
+        height: 100px;
+        width: 100%;
+      }
+
+      .view-details {
+        border: none;
+        background-color: #ffb433;
+        color: white;
+        text-align: center;
+        width: 100px;
+        height: 40px;
+        border-radius: 0.5rem;
+        cursor: pointer;
+      }
+      .view-details:hover {
+        background-color: #e6952b;
+      }
+
+      .image {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    </style>
+    <style>
+      .newsletter-email {
+        align-self: center;
+        width: 300px;
+        height: 25px;
+        padding: 8px;
+        border: none;
+        background-color: white;
+        border-radius: 8px;
+        border: 2px solid #ffb433;
+        font-size: medium;
+      }
+
+      input:focus {
+        outline: none;
+        box-shadow: none;
+        border: 2px solid #ffb433;
+      }
     </style>
   </head>
   <body style="background-color: #fbf8ef; min-height: 95vh; padding-top: 20px">
     <nav class="navbar">
-      <div style="color: white" class="oxygen-regular">LOGO</div>
+      <div style="color: white" class="oxygen-regular">LU's BOOKS</div>
       <div>
         <ul class="tabs oxygen-regular">
           <li>
@@ -79,5 +227,75 @@
       </div>
       <div style="color: white" class="oxygen-regular">Log In</div>
     </nav>
+    <section class="container hero" id="hero">
+      <div id="hero-image" class="hero-img">
+        <img src="./assets/images/girl_reading.jpg" alt="" />
+      </div>
+      <div class="motto">
+        <p class="slogan">NO STORY, NO PROBLEM</p>
+        <p class="playfair-display tagline">
+          We make the choosing part feel as exciting as the reading journey.
+        </p>
+        <a href="books.html"> <button class="buttons">SHOP NOW</button></a>
+      </div>
+    </section>
+    <section class="container best">
+      <div style="text-align: center">
+        <p class="playfair-display" style="font-size: 3rem; color: #343434">
+          Here are our best sellers
+        </p>
+      </div>
+      <div class="best-books">
+        <div id="book1" class="book-card">
+          <div
+            style="height: 255px; width: 100%; margin-bottom: 10px"
+            id="book1Image"
+          >
+            <img class="image" src="./assets/images/Great_Gatsby.jpg" />
+          </div>
+          <div class="book-title">
+            <p class="oxygen-regular" style="font-size: larger">
+              The Great Gatsby <br />
+              <span style="color: grey">F.Scott Fitzgerald</span>
+            </p>
+          </div>
+          <p style="font-size: larger" class="oxygen-regular">R 300.00</p>
+          <a href="./greatGatsby.html"
+            ><button class="view-details">View Details</button></a
+          >
+        </div>
+        <div id="book2" class="book-card">
+          <div
+            style="height: 255px; width: 100%; margin-bottom: 10px"
+            id="book2Image"
+          >
+            <img class="image" src="./assets/images/Rich_Dad_Poor_Dad.jpg" />
+          </div>
+          <div class="book-title">
+            <p class="oxygen-regular" style="font-size: larger">
+              Rich Dad Poor Dad <br />
+              <span style="color: grey">Robert Kiyosaki</span>
+            </p>
+          </div>
+          <p style="font-size: larger" class="oxygen-regular">R 250.00</p>
+          <a href="richDad.html"
+            ><button class="view-details">View Details</button></a
+          >
+        </div>
+      </div>
+    </section>
+    <section class="container best" id="newsletter">
+      <div style="text-align: center; margin-bottom: 5px">
+        <p class="playfair-display" style="font-size: 2rem; color: #343434">
+          Subscribe to our newsletter to receive our latest updates on exclusive
+          promotions and brand new stock!!
+        </p>
+      </div>
+      <input
+        type="text"
+        placeholder="Enter your email"
+        class="newsletter-email"
+      />
+    </section>
   </body>
 </html>
