--- a/about.html
+++ b/about.html
@@ -6,6 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
@@ -22,7 +28,7 @@
         justify-content: space-between;
         align-items: center;
         gap: 20px;
-        margin-bottom: 100px;
+        margin-bottom: 10px;
         border-radius: 10px;
       }
       .tabs {
@@ -30,12 +36,12 @@
         align-items: center;
         justify-content: center;
         gap: 30px;
-        list-style: none; /* Removes bullet points */
-        padding: 0; /* Removes default padding */
+        list-style: none;
+        padding: 0;
         margin: 0;
       }
       .links {
-        text-decoration: none; /* Removes underline */
+        text-decoration: none;
         color: inherit;
       }
 
@@ -43,6 +49,35 @@
         font-family: "Oxygen", sans-serif;
         font-weight: 400;
         font-style: normal;
+      }
+    </style>
+    <style>
+      .container {
+        width: 100%;
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        margin-bottom: 100px;
+      }
+
+      .about-us {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
+
+      .about-details {
+        font-weight: 400;
+        font-family: "Playfair Display", serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        white-space: normal;
       }
     </style>
   </head>
@@ -81,5 +116,15 @@
       </div>
       <div style="color: white" class="oxygen-regular">Log In</div>
     </nav>
+    <section class="container">
+      <div class="about-us">
+        <h1 class="oxygen-regular" style="font-size: 3rem; margin-bottom: 40px">
+          Who are we?
+        </h1>
+        <h1 class="about-details">
+          We are a bookstore company, what do you want to know from us?
+        </h1>
+      </div>
+    </section>
   </body>
 </html>
