--- a/stationary.html
+++ b/stationary.html
@@ -86,12 +86,12 @@
         align-items: center;
         justify-content: center;
         gap: 30px;
-        list-style: none; /* Removes bullet points */
-        padding: 0; /* Removes default padding */
+        list-style: none;
+        padding: 0;
         margin: 0;
       }
       .links {
-        text-decoration: none; /* Removes underline */
+        text-decoration: none;
         color: inherit;
       }
 
