Ready for submission

--- a/about.html
+++ b/about.html
@@ -103,13 +103,11 @@
             >
           </li>
           <li>
-            <a class="links" style="color: #ffb433" href="about.html"
-              >About Us</a
-            >
+            <a class="links" style="color: #ffb433" href="about.html">About</a>
           </li>
           <li>
             <a class="links" style="color: white" href="contact.html"
-              >Contact Us</a
+              >Contact</a
             >
           </li>
         </ul>
@@ -119,10 +117,15 @@
     <section class="container">
       <div class="about-us">
         <h1 class="oxygen-regular" style="font-size: 3rem; margin-bottom: 40px">
-          Who are we?
+          Who am I?
         </h1>
         <h1 class="about-details">
-          We are a bookstore company, what do you want to know from us?
+          I am a student at the University of Cape Town with a deep passion for
+          software development and book reading. My journey into the world of
+          tech and literature led me to start an online store. After realizing
+          how much these two interests shaped my life, I decided to create a
+          platform that caters to avid readers, entrepreneurs, parents, and gift
+          buyers.
         </h1>
       </div>
     </section>
