--- a/contact.html
+++ b/contact.html
@@ -135,11 +135,11 @@
             >
           </li>
           <li>
-            <a class="links" style="color: white" href="about.html">About Us</a>
+            <a class="links" style="color: white" href="about.html">About</a>
           </li>
           <li>
             <a class="links" style="color: #ffb433" href="contact.html"
-              >Contact Us</a
+              >Contact</a
             >
           </li>
         </ul>
@@ -149,7 +149,7 @@
     <section class="container">
       <div class="contact-us">
         <h1 class="oxygen-regular" style="font-size: 3rem; margin-bottom: 40px">
-          Contact Us
+          Contact Me
         </h1>
 
         <form class="contact-form">
