--- a/greatGatsby.html
+++ b/greatGatsby.html
@@ -154,11 +154,11 @@
             >
           </li>
           <li>
-            <a class="links" style="color: white" href="about.html">About Us</a>
+            <a class="links" style="color: white" href="about.html">About</a>
           </li>
           <li>
             <a class="links" style="color: white" href="contact.html"
-              >Contact Us</a
+              >Contact</a
             >
           </li>
         </ul>
